/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.4/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

jar {
    manifest {
        // from 'MANIFEST.MF'
         attributes 'Main-Class':  'my.flink.project.App'

    }
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit test framework.
    testImplementation 'junit:junit:4.13.2'

    //  implementation 'org.apache.flink:flink-java:1.14.0'    
    testImplementation 'org.apache.flink:flink-runtime:1.18.0'
    implementation 'org.apache.flink:flink-clients:1.18.0'

    implementation 'org.apache.flink:flink-connector-files:1.18.0'
    implementation 'org.apache.flink:flink-connector-kafka:3.0.1-1.18'
    //  implementation 'org.apache.kafka:kafka-clients:3.6.0'

    // implementation 'org.apache.flink:flink-streaming-java_2.12:1.14.0'
    // implementation 'org.apache.flink:flink-clients_2.12:1.14.0'
    // This dependency is used by the application.
    implementation 'com.google.guava:guava:32.1.1-jre'
    implementation 'org.apache.flink:flink-shaded-guava:18.0-13.0'


    compileOnly 'org.apache.flink:flink-streaming-java:1.18.0'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'my.flink.project.App'
}


// run {
    // Add the JVM argument
    // jvmArgs '--illegal-access=permit'
// }